--- a/document.tex
+++ b/document.tex
@@ -4,24 +4,26 @@
 \usepackage{algorithm2e}
 \usepackage{listings, xcolor}
 \usepackage{caption}
-\title{A survey on testing approaches for writing correct java code}
-\author{Adrian Schulze }
+\title{A Survey on Verification Approaches for Writing Correct Java Code}
+\author{Adrian Schulze}
 \date{May 2023}
 \copyrightyear{2023}
 \acmYear{2023}
+\email{adrian.schulze@st.ovgu.de}
 \setcopyright{none}
+\affiliation{\institution{Otto-von-Guericke University} \city{Magdeburg} \country{Germany}}
 \acmConference[StudConf '23]{14th Student Conference on Software Engineering and Database Systems}{Summer Term 2023}{Magdeburg, Germany}
 \begin{document}
-	
-	\maketitle
-	 \section{Abstract}\import{sections/}{Abstract}
+	 \import{sections/}{Abstract}
+	 \maketitle
 	 \section{Introduction}\import{sections/}{Introduction}
 	 \section{Background}\import{sections/}{Background}
      \section{Features of the frameworks}\import{sections/}{Contribution}
 	 \section{Evaluation}\import{sections/}{Evaluation}
 	 \section{Discussion}\import{sections/}{Discussion}
 	 \section{Related work} \import{sections/}{RelatedWork}
-	 \section{Conclusion and Future work} \import{section/}{Conclusion}
+	 \section{Conclusion and Future work} \import{sections/}{Conclusion}
+	 \newpage
 	 \section{References}
 	 
 \bibliography{references}{}
