--- a/references.bib
+++ b/references.bib
@@ -70,3 +70,56 @@
 	abstract="This report describes the 2020 Competition on Software Verification (SV-COMP), the 9{\$}{\$}^{\{}{\backslash}text {\{}th{\}}{\}}{\$}{\$}edition of a series of comparative evaluations of fully automatic software verifiers for C and Java programs. The competition provides a snapshot of the current state of the art in the area, and has a strong focus on replicability of its results. The competition was based on 11 052 verification tasks for C programs and 416 verification tasks for Java programs. Each verification task consisted of a program and a property (reachability, memory safety, overflows, termination). SV-COMP 2020 had 28 participating verification systems from 11 countries.",
 	isbn="978-3-030-45237-7"
 }
+
+@InProceedings{JML,
+	author = {Zimmerman, Daniel and Kiniry, Joseph and Hyland, Ralph},
+	year = {2012},
+	month = {05},
+	pages = {},
+	title = {Testing Library Specifications by Verifying Conformance Tests},
+	volume = {7305},
+	isbn = {978-3-642-30472-9},
+	doi = {10.1007/978-3-642-30473-6_6}
+}
+
+@book{Kourie2012,
+	doi = {10.1007/978-3-642-27919-5},
+	url = {https://doi.org/10.1007/978-3-642-27919-5},
+	year = {2012},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Derrick G. Kourie and Bruce W. Watson},
+	title = {The Correctness-by-Construction Approach to Programming}
+}
+
+@incollection{Runge2019,
+	doi = {10.1007/978-3-030-16722-6_2},
+	url = {https://doi.org/10.1007/978-3-030-16722-6_2},
+	year = {2019},
+	publisher = {Springer International Publishing},
+	pages = {25--42},
+	author = {Tobias Runge and Ina Schaefer and Loek Cleophas and Thomas Th\"{u}m and Derrick Kourie and Bruce W. Watson},
+	title = {Tool Support for Correctness-by-Construction},
+	booktitle = {Fundamental Approaches to Software Engineering}
+}
+
+@article{Hoare1969,
+	doi = {10.1145/363235.363259},
+	url = {https://doi.org/10.1145/363235.363259},
+	year = {1969},
+	month = oct,
+	publisher = {Association for Computing Machinery ({ACM})},
+	volume = {12},
+	number = {10},
+	pages = {576--580},
+	author = {C. A. R. Hoare},
+	title = {An axiomatic basis for computer programming},
+	journal = {Communications of the {ACM}}
+}
+
+@article{survey-sv,
+	url = {https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwig9se2x8D_AhXuif0HHQmgA8QQFnoECBAQAQ&url=https%3A%2F%2Fcse.usf.edu%2F~haozheng%2Flib%2Fverification%2Fgeneral%2Fsurvey-sw-fv.pdf&usg=AOvVaw1wJ8YKLOhcn7ql_3WMTLoj},
+	year = {2008},
+	author = {D'Silva, Kroening, Weissenbacher},
+	title = {A Survey of Automated Techniques for
+	Formal Software Verification},
+}
