--- a/sections/RelatedWork.tex
+++ b/sections/RelatedWork.tex
@@ -1,6 +1,3 @@
-TODO: better formulation
-TODO: actually mention the interesting parts
-\begin{itemize}
-	\item Conference journal \citep{10.1007/978-3-030-17502-3_9} provides a large collection of approaches to software checking 
-	\item This \citep{10.1007/978-3-030-45237-7_21} also has a lot of interesting approaches to software checking 
-\end{itemize}
+The conference journal \citep{10.1007/978-3-030-17502-3_9} features a large collection of approaches to software checking. These include a discussion of several software checking methodologies for the programming languages c and java. It provides a deep analysis of entries for a contest of software verification tools.
+The next installment of this conference \citep{10.1007/978-3-030-45237-7_21} also features new approaches to software checking, and provides an analysis of runtime, energy consumption and the accuracy of the tools. 
+D'Silva, Kronening and Weissenbacher\citep{survey-sv} give an overview of software verification. A fundamental overview over techniques used in verifiers, such as static analysis or abstract interpretation is given. 
